# django-x

./: README.md  db.sqlite3  pyproject.toml
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
templates/: _base.html
templates/account/: login.html  signup.html
templates/pages/: home.html
templates/snacks/: snack-create.html  snack-delete.html  snack-detail.html  snack-list.html  snack-update.html
