[tool.poetry]
name = "django-x"
version = "0.1.0"
description = ""
authors = ["Logan Jones <loganemilyjones@mac.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django-debug-toolbar = "^3.2"
Django = "^3.1.7"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.11.1"
whitenoise = "^5.2.0"
pytest-django = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
